version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/Mechanical/Graphics/AnimationExportSettings.rst.txt
.. vale off



:class:`AnimationExportSettings`
================================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.Mechanical.Graphics.AnimationExportSettings(width: int, height: int)

   Bases: :py:obj:`object`



.. py:currentmodule:: AnimationExportSettings

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Height`
            - Specifies the video height.
          * - :py:attr:`~TemporaryFramesPath`
            - When not null, this parameter tells the animation tool to leave behind at the specified directory PNG images of each frame used to generate the animation.
          * - :py:attr:`~Width`
            - Specifies the video width.







Property detail
---------------
.. py:property:: Height
   :type: Optional[int]


   
   Specifies the video height.
















   ..
       !! processed by numpydoc !!

.. py:property:: TemporaryFramesPath
   :type: Optional[str]


   
   When not null, this parameter tells the animation tool to leave behind at the specified directory PNG images of each frame used to generate the animation.
















   ..
       !! processed by numpydoc !!

.. py:property:: Width
   :type: Optional[int]


   
   Specifies the video width.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on